@@ -1,0 +1,31 @@
+<?php
+/* 
+** ZABBIX
+** Copyright (C) 2000-2008 SIA Zabbix
+**
+** This program is free software; you can redistribute it and/or modify
+** it under the terms of the GNU General Public License as published by
+** the Free Software Foundation; either version 2 of the License, or
+** (at your option) any later version.
+**
+** This program is distributed in the hope that it will be useful,
+** but WITHOUT ANY WARRANTY; without even the implied warranty of
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** GNU General Public License for more details.
+**
+** You should have received a copy of the GNU General Public License
+** along with this program; if not, write to the Free Software
+** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+**/
+?>
+<?php
+
+// Maintenance mode 
+//define('ZBX_DENY_GUI_ACCESS',1); 
+
+// IP range, who allowed to connect to FrontEnd
+//$ZBX_GUI_ACCESS_IP_RANGE = array('127.0.0.1');
+
+// MSG showed on Warning screen!
+//$_REQUEST['warning_msg'] = 'ZABICOM is under maintenance.';
+?>
